# DasynceSE

./: .gitignore  Assets.vcxproj  Assets.vcxproj.filters  CMakeLists.txt  README.md
Assets/: Kanalisation.prfb  Light_1.prfb  Player.prfb
Assets/Prefabs/: Healthbar.prfb  Lamp.prfb
Assets/Scripts/: Game.cpp  Game.h  Macros.h
Assets/Scripts/Camera/: PlayerCamera.cpp  PlayerCamera.h
Assets/Scripts/Enemy/: EnemyHandler.cpp  EnemyHandler.h
Assets/Scripts/Player/: PlayerController.cpp  PlayerController.h  Slide.cpp  Slide.h  WallJump.cpp  WallJump.h
Assets/Scripts/UI/: LevelUI.cpp
DasynceSE/assets/: Enviroment.prfb  Wall 1.prfb
Engine/Saves/: enginepath.txt  index.txt  tags.txt
Engine/Saves/DAS/: background.txt  camera.txt  sprites.txt
Engine/Saves/computer_room/: background.txt  camera.txt  sprites.txt
Engine/Saves/scene 1/: camera.txt  sprites.txt
Engine/Source/: Engine.cpp  EngineConfig.h  IScript.h  SpriteEngine.h
Engine/Source/GUI/: GUI.h
assets/: Enviroment.prfb  LightLamp(D)(D).prfb  LightLamp.prfb
assets/Prefabs/: pipe_1.prfb  pipe_up.prfb
assets/Scripts/: game.cpp  game.h
assets/Scripts/Camera/: cameraController.cpp
assets/Scripts/Enemy/: enemyBehaviour.cpp  enemyBehaviour.h  ratEnemy.cpp  ratEnemy.h
assets/Scripts/Player/: Slide.cpp
assets/Scripts/UI/: LevelUI.cpp  LevelUI.h
assets/Scripts/player/: playerController.cpp  playerController.h  slide.cpp  slide.h  wallJump.cpp  wallJump.h
assets/Sprites/Light/: lightController.cpp  lightController.h
assets/player/: player.pdn
engine/Source/: Engine.cpp
engine/Source/GUI/: GUI.cpp
engine/saves/: index.txt  tags.txt
engine/saves/scene 1/: animations.txt  camera.txt  (+2 more)
x64/Debug/: Assets.vcxproj.FileListAbsolute.txt  input.obj.enc
(+58 files in other folders)
